upgrade for phone display number 2

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <div class="header">
         <div class="header-content">
             <div>
-                <img src="./assets/img/CHU.png" alt="Logo CHU" class="logo left-logo">
+                <!-- <img src="./assets/img/CHU.png" alt="Logo CHU" class="logo left-logo"> -->
+                <img src="./assets/img/Service.png" alt="Logo Service" class="logo right-logo">
             </div>
             <div class="header-text">
                 CENTRE HOSPITALIER UNIVERSITAIRE <br>
@@ -24,7 +25,6 @@
                 SERVICE DE TRAUMATOLOGIE-ORTHOPEDIE B
             </div>
             <div>
-                <img src="./assets/img/Service.png" alt="Logo Service" class="logo right-logo">
             </div>
         </div>
     </div>
