--- a/index.html
+++ b/index.html
@@ -3,36 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Abdessabour sebbar</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to the CSS file -->
+    <title>Abdessabour Sebbar</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="background-container">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/moon2.png" alt="">
-        <div class="stars"></div>
-        <div class="twinkling"></div>
-        <div class="clouds"></div>
-    </div>
+    <div class="background-container"></div>
     <div class="header">
         <div class="header-content">
             <div>
-                <!-- <img src="./assets/img/CHU.png" alt="Logo CHU" class="logo left-logo"> -->
                 <img src="./assets/img/Service.png" alt="Logo Service" class="logo right-logo">
             </div>
             <div class="header-text">
+                <hr class="separator">
                 CENTRE HOSPITALIER UNIVERSITAIRE <br>
                 MOHAMMED VI OUJDA <br>
                 SERVICE DE TRAUMATOLOGIE-ORTHOPEDIE B
-            </div>
-            <div>
+                <hr class="separator">
             </div>
         </div>
     </div>
-
+    
     <div class="container">
+        <hr class="separator">
         <div class="title">
             TABLEAU DE PRESCRIPTION DES MEDICAMENTS
         </div>
+        <hr class="separator">
         <div class="description">
             Ce site vous présente le tableau de prescription des médicaments suggérés pour cette semaine. Veuillez respecter scrupuleusement les indications du tableau pour assurer une prise en charge optimale des patients, qu'ils soient sortants, hospitalisés ou vus en consultation.
             <br>
